# concierge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTIONS.md  Collection_Management.old.py  Concierge.py  Dockerfile  Dockerfile.dockerignore  Dockerfile.local  Dockerfile.local.dockerignore  ETHICS.md  GITHUB_COLLABORATOR_GUIDE.md  GRATITUDE.md  README.md  add_api_handler.py  biome.json  buildReleaseArtifacts.ts  concierge.example.yml  concierge_install_arguments.py  dev_installer.py  dev_launcher.py  dev_requirements.txt  docker-compose-concierge-local.yml  docker-compose-concierge.yml  docker-compose-dev-gpu-rbac.yml  docker-compose-dev-gpu.yml  docker-compose-dev.yml  docker-compose-gpu-local.yml  docker-compose-gpu.yml  docker-compose-launch-keycloak.yml  docker-compose-local.yml  docker-compose-ollama.yml  docker-compose-opensearch-demo.yml  docker-compose-opensearch.yml  docker-compose-zip-policy.yml  docker-compose.yml  (+28 more)
concierge_packages/installer/: pyproject.toml
concierge_packages/installer/src/install_concierge/: install.py  relaunch.py
concierge_packages/installer/src/install_concierge/installer_lib/: clean_up_existing.py  do_install.py  docker_compose_helper.py  docker_containers.py  install_demo_users.py  package_dir.py  upgrade_scripts.py
concierge_packages/launcher/: pyproject.toml  ruff.toml
concierge_packages/launcher/src/launch_concierge/: install.py  relaunch.py
concierge_packages/launcher/src/launch_concierge/concierge_installer/: __init__.py  arguments.py  clean_up_existing.py  configure_openid.py  create_certificates.py  do_install.py  docker_containers.py  functions.py  install_demo_users.py  package_dir.py  set_env.py
concierge_packages/launcher/src/launch_concierge/concierge_launcher/: __init__.py
concierge_packages/launcher/src/launch_concierge/docker_compose/: docker-compose-launch-keycloak.yml  docker-compose.yml
docker_containers/shabti_api/: .gitignore  .syft.yaml  Dockerfile  Dockerfile.dockerignore  Dockerfile.local  Dockerfile.local.dockerignore  add_keycloak_demo_users.py  dev_launcher.py  dev_requirements.txt  docker_run.py  load_dotenv.py  local_requirements.txt  logging_config.py  logging_config.yml  pyproject.toml  requirements.txt  sbom-trivy.json  sbom.json  sbom_requirements.txt  syft_sbom.json
docker_containers/shabti_api/app/: app.py  authorization.py  document_collections.py  embeddings.py  ingesting.py  insecure_routes.py  insert_urls.py  load_prompter_config.py  loading.py  opensearch.py  opensearch_binary.py  opensearch_ingesting.py  opensearch_prompting.py  prompting.py  secure_routes.py  upload_prompt_file.py
docker_containers/shabti_api/keycloak_users/: users.json
docker_containers/shabti_api/loaders/: pdf.py  text.py  web.py
docker_containers/shabti_api/prompter_config/enhancers/: concern.shabti
docker_containers/shabti_api/prompter_config/tasks/: fact_check.shabti  search.shabti  summary.shabti
docker_containers/shabti_api/src/: load_dotenv.py
docker_containers/shabti_api/src/app/: app.py  authorization.py  document_collections.py  ingesting.py  insecure_routes.py  insert_uploaded_files.py  load_prompter_config.py  loading.py  ollama.py  opensearch.py  opensearch_binary.py  opensearch_ingesting.py  opensearch_prompting.py  run_prompt.py  secure_routes.py  shabti_logging.py
docker_containers/shabti_api/src/loaders/: base_loader.py  fallback.py  pdf.py  text.py  unstructured.py  web.py
docker_containers/shabti_api/tests/: conftest.py
docker_containers/shabti_api/tests/security_disabled/: __init__.py  conftest.py  test_collections_api.py  test_document_collection_name_collisions.py  test_prompt_file_upload.py  test_prompting_api.py
docker_containers/shabti_api/tests/security_enabled/: __init__.py  conftest.py  lib.py  test_admin_token.py  test_auth_enabled.py  test_document_collection_name_collisions.py  test_file_route.py  test_rbac.py
docker_containers/shabti_web/: Dockerfile  Dockerfile.dockerignore  Dockerfile.local  Dockerfile.local.dockerignore  app_exception_test.py  app_text_list.py  dev_launcher.py  dev_requirements.txt  docker_run.py  load_dotenv.py  local_requirements.txt  pyproject.toml  requirements.txt
docker_containers/shabti_web/app/: app.py
docker_containers/shabti_web/app/common/: collections_data.py  doc_page_link.py  document_item.py  home_texts.py  ingester.py  markdown_renderer.py  prompter.py  status.py
docker_containers/shabti_web/app/security_disabled_app/: app.py  collection_create.py  collection_management.py  collection_selector_server.py  files_route.py  home.py
docker_containers/shabti_web/app/security_enabled_app/: app.py  auth.py  collection_create.py  collection_management.py  files_route.py  home.py  oauth2.py
docker_containers/shabti_web/src/: load_dotenv.py
docker_containers/shabti_web/src/app/: app.py
launcher_package/: pyproject.toml
launcher_package/src/launch_concierge/: docker-compose-concierge.yml  docker-compose-gpu.yml  docker-compose.yml  install.py  relaunch.py
launcher_package/src/launch_concierge/concierge_installer/: arguments.py  functions.py  upgrade_scripts.py
launcher_package/src/launch_concierge/docker_compose/: docker-compose-gpu.yml  docker-compose.yml
launcher_package/src/launch_concierge/docker_compose_dependencies/: docker-compose-concierge.yml  docker-compose-ollama.yml
python_packages/isi_util/: pyproject.toml
python_packages/isi_util/src/isi_util/: list_util.py  venv.py
python_packages/shabti_api_client/: Dockerfile  pyproject.toml
python_packages/shabti_api_client/src/shabti_api_client/: __init__.py  auth_client.py  base_client.py  client.py  codes.py  exceptions.py  raise_error.py
python_packages/shabti_api_client/tests/: test_security_disabled.py
python_packages/shabti_api_client/tests/security_disabled/: __init__.py  conftest.py  test_security_disabled.py
python_packages/shabti_api_client/tests/security_enabled/: __init__.py  conftest.py  lib.py  test_admin_client.py  test_rbac.py  test_security_enabled.py
(+597 files in other folders)
