[project]
name = "launch-concierge"
version = "0.4rc13"
requires-python = ">=3.10"
dependencies = [
    "script-builder",
    "isi-util",
    "packaging"
]

[project.scripts]
install_concierge = "launch_concierge.install:install"
relaunch_concierge = "launch_concierge.relaunch:relaunch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"