[project]
name = "install-concierge"
version = "0.5a12"
requires-python = ">=3.10"
dependencies = [
    "script-builder~=0.2a0",
    "isi-util~=0.2a0",
    "concierge-util~=0.2a2",
    "packaging",
    "python-dotenv",
    "requests",
    "cryptography"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"