[project]
name = "launch-concierge"
version = "0.5a2"
requires-python = ">=3.10"
dependencies = [
    "script-builder~=0.2a0",
    "isi-util~=0.2a0",
    "concierge-util~=0.2a1",
    "packaging",
    "python-dotenv"
]

[project.scripts]
install_concierge = "launch_concierge.install:install"
relaunch_concierge = "launch_concierge.relaunch:relaunch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"