[project]
name = "shabti-api"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "configobj>=5.0.9",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-unstructured>=0.1.6",
    "lxml>=6.0.1",
    "opensearch-py>=3.0.0",
    "python-json-logger>=3.3.0",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "sentence-transformers>=5.1.0",
    "unstructured[all-docs]>=0.18.14",
    "isi-util==0.3a1",
    "shabti-util==0.3a2",
    "shabti-types==0.1a7",
    "shabti-keycloak==0.1a2"
]
[project.optional-dependencies]
cu126 = [
    "torch==2.7.1+cu126; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.22.1+cu126; sys_platform == 'linux' and platform_machine == 'x86_64'", 
    "torchaudio==2.7.1+cu126; sys_platform == 'linux' and platform_machine == 'x86_64'"
]
[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
index-strategy = "unsafe-best-match"
[tool.uv.sources]
isi-util = { path = "/python_packages/isi_util", editable = true }
shabti-util = { path = "/python_packages/shabti_util", editable = true }
shabti-types = { path = "/python_packages/shabti_types", editable = true }
shabti-keycloak = { path = "/python_packages/shabti_keycloak", editable = true }
[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"