[project]
name = "shabti-api"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "beautifulsoup4~=4.13.5",
    "configobj~=5.0.9",
    "fastapi[standard]~=0.119.0",
    "langchain~=0.3.27",
    "langchain-community~=0.3.29",
    "langchain-unstructured~=0.1.6",
    "lxml~=6.0.1",
    "opensearch-py~=3.0.0",
    "python-json-logger~=3.3.0",
    "python-magic-bin~=0.4.14 ; sys_platform == 'win32'",
    "sentence-transformers~=5.1.0",
    "unstructured[all-docs]~=0.18.14",
    "isi-util==0.3a3",
    "shabti-util==0.3a3",
    "shabti-types==0.1a8",
    "shabti-keycloak==0.1a3"
]
[project.optional-dependencies]
cu126 = [
    "torch==2.7.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.22.1; sys_platform == 'linux' and platform_machine == 'x86_64'", 
    "torchaudio==2.7.1; sys_platform == 'linux' and platform_machine == 'x86_64'"
]
cpu = [
    "torch==2.7.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.22.1; sys_platform == 'linux' and platform_machine == 'x86_64'", 
    "torchaudio==2.7.1; sys_platform == 'linux' and platform_machine == 'x86_64'"
]
[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
  ],
]
[tool.uv.sources]
isi-util = { path = "/python_packages/isi_util", editable = true }
shabti-util = { path = "/python_packages/shabti_util", editable = true }
shabti-types = { path = "/python_packages/shabti_types", editable = true }
shabti-keycloak = { path = "/python_packages/shabti_keycloak", editable = true }
torch = [
  { index = "pytorch-cu126", extra = "cu126" },
]
torchvision = [
  { index = "pytorch-cu126", extra = "cu126" },
]
torchaudio = [
  { index = "pytorch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "pytest~=8.4.2",
    "pytest-asyncio~=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"
addopts = "--import-mode=importlib"
