[project]
name = "shabti-web"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "humanize~=4.13.0",
    "shiny~=1.4.0",
    "shinyswatch~=0.9.0",
    "shabti-util==0.3a2",
    "shabti-types==0.1a7",
    "shabti-keycloak==0.1a2",
    "shabti-api-client==0.1a7",
    "tqdm~=4.67.1",
]
[tool.uv.sources]
shabti-util = { path = "/python_packages/shabti_util", editable = true }
shabti-types = { path = "/python_packages/shabti_types", editable = true }
shabti-keycloak = { path = "/python_packages/shabti_keycloak", editable = true }
shabti-api-client = { path = "/python_packages/shabti_api_client", editable = true }
