[project]
name = "isi-util"
version = "0.3a2"
requires-python = ">=3.12"
dependencies = [
    "zxcvbn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest~=8.4.2",
  "pytest-asyncio~=1.2.0"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"