[project]
name = "shabti-api-client"
version = "0.1a8"
requires-python = ">=3.12"
dependencies = [
  "httpx",
  "python-keycloak~=5.8.1",
  "shabti-types",
]

[dependency-groups]
dev = [
  "pytest~=8.4.2",
  "pytest-asyncio~=1.2.0",
  "shabti-keycloak"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="session"
asyncio_default_test_loop_scope = "session"
